[package]
name = "advent_of_code_2020"
version = "0.1.0"
authors = ["Stuart Haidon <serayen.sh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc_lib = { git = "https://github.com/Measter/aoc_lib", branch = "2.0" }
color-eyre = "0.5.11"
itertools = "0.10.1"
maplit = "1.0.2"
nom = "6.2.1"
