[package]
name = "advent_of_code_2020"
version = "0.1.0"
authors = ["Stuart Haidon <serayen.sh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
overflow-checks = true
debug = true

[dependencies]
aoc_lib = { git = "https://github.com/Measter/aoc_lib" }
color-eyre = "0.6.1"
itertools = "0.10.3"
maplit = "1.0.2"
nom = "6.2.1"
